fixed bug where cards were hidden behind navbar

--- a/zebrasocial.ui/src/styles/_animalCards.scss
+++ b/zebrasocial.ui/src/styles/_animalCards.scss
@@ -17,6 +17,13 @@
     left: 0;
     cursor: pointer;
   }
+  
+  .animal {
+    position: fixed; left: 30%;
+    flex-direction: wrap;
+    margin: 50;
+    justify-content: space-between;
+ }
 
   .animal-container {
      position: fixed; left: 30%;
